feat: add admin table for backoffice
